js4 and assignment

--- a/javaScript/js4 fav movie.html
+++ b/javaScript/js4 fav movie.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js part4</title>
+    <title>guess fav movie</title>
 </head>
 <body>
     
-    <script src="js4.js"></script>
+    <script src="js4 fav movie.js"></script>
 </body>
 </html>
