--- a/javaScript/js p10.html
+++ b/javaScript/js p10.html
@@ -10,6 +10,22 @@
     <button>click me!</button>
     <button>click me!</button>
     <button>click me!</button>
+    <br><hr><br>
+    <input type="text" placeholder="type something!">
+    <br><hr><br>
+
+    <form action="/action">
+        <p>this is a form</p>
+        <input type="text" placeholder="name" id="user">
+        <input type="text" placeholder="name" id="pass">
+        <button>submit</button>
+    </form>
+
+
+
+
+
+
     <script src="js p10.js"></script>
 </body>
 </html>
