--- a/javaScript/js p10 activity.html
+++ b/javaScript/js p10 activity.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>random color generator</title>
     <link rel="stylesheet" href="js p10 activity.css">
 </head>
 <body>
