--- a/Delta-main/Delta-main/JS/Simon Says/index.html
+++ b/Delta-main/Delta-main/JS/Simon Says/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Simon Says Game</h1>
     <h2>Press any key to start the game</h2>
+    <h3>Highest score was 0</h3>
 
     <div class="btn-container">
       <div class="line-one">
@@ -21,6 +22,6 @@
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app2.js"></script>
   </body>
 </html>
